# Postboy

./: .gitignore  README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
design/: app.js  index.html  styles.css
src/: App.vue
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  grpc.rs  lib.rs  main.rs
