[package]
name = "postboy"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "postboy_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls-native-roots",
    "gzip",
    "brotli",
    "deflate",
    "charset",
    "http2",
    "multipart",
] }
dirs = "5"
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "sqlite",
] }
libsqlite3-sys = { version = "0.30", features = ["bundled"] }
tokio = { version = "1", features = ["fs"] }
anyhow = "1"

# gRPC dynamic client (.proto → DescriptorPool → DynamicMessage)
tonic = { version = "0.12", default-features = false, features = [
    "transport",
    "codegen",
    "prost",
    "tls",
    "tls-roots",
] }
prost = "0.13"
prost-reflect = { version = "0.14", features = ["serde"] }
protox = "0.7"
bytes = "1"
http = "1"

